--- a/src/Pages/Homepage.css
+++ b/src/Pages/Homepage.css
@@ -12,12 +12,7 @@
     padding: 1rem 0;
     width: 100%;
 }
-.loading {
-    display: flex;
-    justify-content: center;
-    font-size: 2rem;
-    font-family: "Anton";
-}
+
 .inputs {
     display: flex;
     box-sizing: border-box;
@@ -50,8 +45,15 @@
     gap: 2rem;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
+    position: relative;
 }
-
+.loading {
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+    font-family: "Anton";
+    position: absolute;
+}
 .page-btn {
     border: none;
     font-size: 1.1rem;
